# AI-Engineering-Incident-Simulator

./: .gitignore  Dockerfile  GEMINI.md  README.md  docker-compose.yml  test_auth.py
backend/: .env.example  Dockerfile  alembic.ini  inspect_db.py  pyproject.toml  requirements.txt  stress_test_auth.py
backend/alembic/: env.py
backend/alembic/versions/: bde8833b2e78_initial_schema.py  c77a83b6b43b_fix_attempts_created_at_default.py  fd431669c7a7_sprint1_user_tables.py
backend/src/: main.py
backend/src/api/: router.py
backend/src/api/v1/: auth.py  health.py  incidents.py  reports.py  users.py
backend/src/core/: config.py  security.py
backend/src/db/: base.py  session.py
backend/src/evaluation_engine/: evaluator.py
backend/src/incident_engine/: loader.py
backend/src/llm/: mock.py  openrouter.py  provider.py
backend/src/middleware/: auth_middleware.py
backend/src/models/: __init__.py  attempt.py  attempt_file.py  hint_usage.py  incident.py  llm_evaluation.py  user.py  user_incident.py  user_progress.py  user_skill.py
backend/src/repositories/: __init__.py  attempt_repository.py  incident_repository.py  user_repository.py
backend/src/schemas/: __init__.py  attempt_schema.py  auth_schema.py  evaluation_schema.py  incident_schema.py  user_progress_schema.py
backend/src/services/: __init__.py  auth_service.py  incident_service.py  report_service.py  skill_service.py
backend/tests/: __init__.py  test_intensive_groq.py  test_intensive_pipeline.py  test_llm_connectivity.py  test_report_service.py  test_skill_service.py  test_submission.py
(+49 files in other folders)
