[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi>=0.137.0",
    "groq>=1.4.0",
    "httpx>=0.28.1",
    "openai>=2.43.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.14.1",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
